Fix z-index bug in CB_CBView_MainHeader

--- a/classes/CB_CBView_MainHeader/CB_CBView_MainHeader.css
+++ b/classes/CB_CBView_MainHeader/CB_CBView_MainHeader.css
@@ -4,6 +4,7 @@
     border-bottom: 1px solid var(--CB_UI_borderColor);
     position: sticky;
     top: 0;
+    z-index: 500;
 }
 
 
